[gd_scene load_steps=13 format=1]

[ext_resource path="res://arcade_pricing.gd" type="Script" id=1]
[ext_resource path="res://inner_background.png" type="Texture" id=2]
[ext_resource path="res://potential_background.png" type="Texture" id=3]
[ext_resource path="res://pixels_font.fnt" type="BitmapFont" id=4]
[ext_resource path="res://zone_one.gd" type="Script" id=5]
[ext_resource path="res://lower.png" type="Texture" id=6]
[ext_resource path="res://raise.png" type="Texture" id=7]
[ext_resource path="res://zone_two.gd" type="Script" id=8]
[ext_resource path="res://zone_three.gd" type="Script" id=9]
[ext_resource path="res://zone_four.gd" type="Script" id=10]
[ext_resource path="res://zone_five.gd" type="Script" id=11]
[ext_resource path="res://zone_six.gd" type="Script" id=12]

[node name="arcade_pricing" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.0246394, 0.759904 )
transform/scale = Vector2( 0.0500379, 0.063964 )
texture = ExtResource( 2 )

[node name="background1" type="Sprite" parent="."]

transform/pos = Vector2( -18.2428, 0.764614 )
transform/scale = Vector2( 0.0173432, 0.0639494 )
texture = ExtResource( 3 )

[node name="background2" type="Sprite" parent="."]

transform/pos = Vector2( 2.72996, 0.776362 )
transform/scale = Vector2( 0.0122127, 0.0639318 )
texture = ExtResource( 3 )

[node name="background3" type="Sprite" parent="."]

transform/pos = Vector2( 20.8535, 0.792593 )
transform/scale = Vector2( 0.0125389, 0.0633171 )
texture = ExtResource( 3 )

[node name="goods" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -25.0
margin/top = -29.0
margin/right = 78.0
margin/bottom = 12.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade"
visible_characters = -1

[node name="price" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -29.0
margin/right = 88.0
margin/bottom = 6.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Price"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.15, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -29.0
margin/right = 83.0
margin/bottom = 5.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Range"
visible_characters = -1

[node name="zone_one" type="Node2D" parent="."]

transform/pos = Vector2( 0.0427612, -13.2251 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 5 )

[node name="name" type="RichTextLabel" parent="zone_one"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -76.0
margin/right = 126.0
margin/bottom = -19.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade One"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_one"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -70.0
margin/right = 95.0
margin/bottom = -18.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_one"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = -75.0
margin/right = 16.0
margin/bottom = -57.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_one"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -73.0
margin/right = 69.0
margin/bottom = -16.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_one"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = -77.0
margin/right = 28.0
margin/bottom = -59.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="zone_two" type="Node2D" parent="."]

transform/pos = Vector2( 0.147227, -6.96978 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 8 )

[node name="name" type="RichTextLabel" parent="zone_two"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -38.0
margin/right = 135.0
margin/bottom = 19.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade Two"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_two"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -41.0
margin/right = 88.0
margin/bottom = 18.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_two"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = -44.0
margin/right = 16.0
margin/bottom = -26.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_two"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -46.0
margin/right = 69.0
margin/bottom = 11.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_two"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = -47.0
margin/right = 28.0
margin/bottom = -29.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="zone_three" type="Node2D" parent="."]

transform/pos = Vector2( 0.00215071, -0.178344 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 9 )

[node name="name" type="RichTextLabel" parent="zone_three"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -9.0
margin/right = 154.0
margin/bottom = 48.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade Three"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_three"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = -8.0
margin/right = 88.0
margin/bottom = 45.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_three"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = -22.0
margin/right = 16.0
margin/bottom = -4.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_three"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -21.0
margin/right = 69.0
margin/bottom = 36.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_three"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = -23.0
margin/right = 28.0
margin/bottom = -5.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="zone_four" type="Node2D" parent="."]

transform/pos = Vector2( 0.0646973, 6.07697 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 10 )

[node name="name" type="RichTextLabel" parent="zone_four"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 21.0
margin/right = 132.0
margin/bottom = 78.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade Four"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_four"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 23.0
margin/right = 93.0
margin/bottom = 77.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_four"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 8.0
margin/right = 16.0
margin/bottom = 26.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_four"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 8.0
margin/right = 69.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_four"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 5.0
margin/right = 28.0
margin/bottom = 23.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="zone_five" type="Node2D" parent="."]

transform/pos = Vector2( 0.168503, 14.3889 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="RichTextLabel" parent="zone_five"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 23.0
margin/right = 136.0
margin/bottom = 80.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade Five"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_five"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 24.0
margin/right = 98.0
margin/bottom = 84.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_five"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 14.0
margin/right = 16.0
margin/bottom = 32.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_five"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 15.0
margin/right = 69.0
margin/bottom = 72.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_five"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 12.0
margin/right = 28.0
margin/bottom = 30.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="zone_six" type="Node2D" parent="."]

transform/pos = Vector2( 0.356154, 22.3407 )
transform/scale = Vector2( 0.944782, 0.101023 )
script/script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="name" type="RichTextLabel" parent="zone_six"]

rect/scale = Vector2( 0.125, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = 36.0
margin/right = 120.0
margin/bottom = 93.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "Arcade Six"
visible_characters = -1

[node name="range" type="RichTextLabel" parent="zone_six"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 41.0
margin/right = 91.0
margin/bottom = 96.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.121569, 1, 0.0901961, 1 )
bbcode/enabled = false
bbcode/bbcode = "0-10"
visible_characters = -1

[node name="lower" type="TextureButton" parent="zone_six"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 14.0
margin/top = 23.0
margin/right = 16.0
margin/bottom = 41.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[node name="price_output" type="RichTextLabel" parent="zone_six"]

rect/scale = Vector2( 0.15, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 22.0
margin/right = 69.0
margin/bottom = 79.0
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.761719, 0.761719, 0.761719, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="raise" type="TextureButton" parent="zone_six"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 23.0
margin/right = 28.0
margin/bottom = 41.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 0.1, 1 )
params/stretch_mode = 0

[connection signal="button_down" from="zone_one/lower" to="zone_one" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_one/raise" to="zone_one" method="_on_raise_button_down"]

[connection signal="button_down" from="zone_two/lower" to="zone_two" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_two/raise" to="zone_two" method="_on_raise_button_down"]

[connection signal="button_down" from="zone_three/lower" to="zone_three" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_three/raise" to="zone_three" method="_on_raise_button_down"]

[connection signal="button_down" from="zone_four/lower" to="zone_four" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_four/raise" to="zone_four" method="_on_raise_button_down"]

[connection signal="button_down" from="zone_five/lower" to="zone_five" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_five/raise" to="zone_five" method="_on_raise_button_down"]

[connection signal="button_down" from="zone_six/lower" to="zone_six" method="_on_lower_button_down"]

[connection signal="button_down" from="zone_six/raise" to="zone_six" method="_on_raise_button_down"]


